added pages and loader

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -13,7 +13,23 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">
+
+        <div class="loader landing ">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+            <div class="wineglass left">
+                <div class="top"></div>
+            </div>
+            <div class="wineglass right">
+                <div class="top"></div>
+            </div>
+        </div>
+
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
